# LicenseStoic

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/licensestoic/: __init__.py  cli.py  git_source.py  llm_explainer.py  models.py  parsing.py  pipeline.py  remediation.py  report.py  review_gate.py  scanner.py  severity.py  validator.py
tests/: conftest.py  factories.py  test_cli.py  test_git_source.py  test_llm_validation.py  test_parsing.py  test_pipeline.py  test_remediation.py  test_report.py  test_review_gate.py  test_scanner.py  test_validator.py
