[project]
name = "licensestoic"
version = "0.1.0"
description = "Open Source License Self Healer — detects and repairs license conflicts"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0,<3.0",
    "license-expression>=30.0",
    "rich>=13.0",
    "click>=8.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
scan = [
    "scancode-toolkit>=32.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]

[project.scripts]
licensestoic = "licensestoic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/licensestoic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["license_expression.*", "scancode.*"]
ignore_missing_imports = true
